@@ -119,6 +119,16 @@ This skill also allows the player to learn how to smith an item he \
 or she has found.  To do this, the player needs to have a blank Recipe \
 page, or a Recipe book with blank pages in his or her inventory.
 
+ARTFOCUS=ARTISANALFOCUS
+ARTISANAL_FOCUS=ARTISANALFOCUS
+ARTISANALFOCUS=<ABILITY>\
+Artisans can use their choices of skill training and expertises \
+to focus in certain areas, and thereby be known by that skill \
+specialization.  This can be like "Farmer", "Rancher", "Smith", "Tailor", \
+"Sculptor", "Prospector", "Chef", "Carpenter", "Architect", or "Artist.  \
+This focus notoriety can be toggled by entering ARTFOCUS, but is \
+activated by default.
+
 ASTROENGINEER=Sorry, but this is Not Yet Implemented
 
 ATTRIBUTETRAINING=ATTRIBUTE_TRAINING
